--- a/src/content/store/1.md
+++ b/src/content/store/1.md
@@ -12,7 +12,7 @@ features:
   - title: "A bounch of pages"
     description: "Precoded pages to get you started right away."
 preview: "https://lexingtonthemes.com/viewports/semplice"
-checkout: "https://lexingtonthemes.lemonsqueezy.com/checkout/buy/59105270-55f2-42b0-9728-3094f40f86f4"
+checkout: "https://lexingtonthemes.com/info/semplice"
 description: A clean, modern theme for a SAAS, decentralized platform, blockchain or cryptocurrency service. It combines a white background with purple highlights, featuring a simple, user-friendly layout for a technology-focused platform
 
 image:
