--- a/src/content/store/2.md
+++ b/src/content/store/2.md
@@ -12,7 +12,7 @@ features:
   - title: "A bounch of pages"
     description: "Precoded pages to get you started right away."
 preview: "https://lexingtonthemes.com/viewports/vanta"
-checkout: "https://lexingtonthemes.lemonsqueezy.com/checkout/buy/f0a11cac-e5c4-4cee-9a11-631749fd6647"
+checkout: "https://lexingtonthemes.com/info/vanta"
 description: A dark-mode educational platform theme, emphasizing a sleek and modern interface for online learning. It offers features like course page, teachers, and lessons, all in a coherent, dark aesthetic designed to enhance user focus and interaction.
 image:
   url: "/images/store/vanta.png"
