--- a/src/content/store/3.md
+++ b/src/content/store/3.md
@@ -12,7 +12,7 @@ features:
   - title: "A bounch of pages"
     description: "Precoded pages to get you started right away."
 preview: "https://lexingtonthemes.com/viewports/riflesso"
-checkout: "https://lexingtonthemes.lemonsqueezy.com/checkout/buy/91ad4062-e859-4d98-9e67-5331bb4d095c"
+checkout: "https://lexingtonthemes.com/info/riflesso"
 description: A monochromatic design with a sophisticated and clean layout, ideal for a portfolio or professional services website. It combines grayscale photography with minimalist text for an elegant and modern look.
 image:
   url: "/images/store/riflesso.png"
