--- a/src/content/posts/1.md
+++ b/src/content/posts/1.md
@@ -27,6 +27,25 @@ Google Fonts is a free, open-source project offering a diverse array of fonts fo
 
 **Script Fonts** — Script fonts have a flowing, calligraphic style, often used for decorative purposes. Notable examples are Brush Script, Calligrapher, and Pacifico.
 
+```js
+// Example: Function to calculate the area of a rectangle
+function calculateRectangleArea(length, width) {
+    if (length <= 0 || width <= 0) {
+        throw new Error('Length and width must be positive numbers.');
+    }
+    return length * width;
+}
+
+// Usage
+try {
+    const area = calculateRectangleArea(5, 10);
+    console.log(`The area of the rectangle is: ${area} square units.`);
+} catch (error) {
+    console.error(error.message);
+}
+
+```
+
 ### Key Considerations When Choosing Fonts
 
 When selecting fonts for your site, consider your content’s purpose and audience. Here are some guidelines:
